name: hxt-binary
version: 0.0.1
license: OtherLicense
license-file: LICENCE
maintainer: Uwe Schmidt <uwe@fh-wedel.de>
stability: experimental
category: XML
synopsis: Serialisation and deserialisation of HXT XmlTrees.
description: Extension for storing and loading already parsed XML documents in an internal format.
 Serialisation and Deserialisation is done with the binary package.
homepage: http://www.fh-wedel.de/~si/HXmlToolbox/index.html
copyright: Copyright (c) 2009 Uwe Schmidt
build-type: Simple
cabal-version: >=1.6

extra-source-files:
 test/TestXmlTreeBinary.hs
 test/t.xml
 test/Makefile

library
 exposed-modules:
  Text.XML.HXT.Arrow.Binary
  Text.XML.HXT.DOM.Binary
  Data.Tree.NTree.Binary

 hs-source-dirs: src
 ghc-options: -Wall

 build-depends: base       >= 4   && < 5,
                haskell98  >= 1   && < 2,
                bytestring >= 0.9 && < 1,
                binary     >= 0.5 && < 1,
                bzlib      >= 0.5 && < 1,
                hxt        >= 8.2 && < 9
