Name:           hxt-cache
Version:        9.0.2
Synopsis:       Cache for HXT XML Documents and other binary data
Description:    Extension for caching XML documents and other binary data in cache directory
                of the local filesystem.
License:        OtherLicense
License-file:   LICENSE
Author:         Uwe Schmidt
Maintainer:     Uwe Schmidt <uwe@fh-wedel.de>
Stability:      Stable
Category:       XML
Homepage:       http://www.fh-wedel.de/~si/HXmlToolbox/index.html
Copyright:      Copyright (c) 2010 Uwe Schmidt
Build-type:     Simple
Cabal-version:  >=1.6

extra-source-files:
 test/TestXmlCache.hs
 examples/mini/Cache.hs

library
 exposed-modules:
  Text.XML.HXT.Cache
  Text.XML.HXT.Arrow.XmlCache
  Control.Concurrent.ResourceTable

 hs-source-dirs: src

 ghc-options: -Wall
 ghc-prof-options: -auto-all -caf-all

 build-depends: base       >= 4   && < 5,
                bytestring >= 0.9 && < 1,
                binary     >= 0.5 && < 1,
                containers >= 0.2 && < 1,
                deepseq    >= 1.1 && < 2,
                directory  >= 1   && < 2,
                filepath   >= 1.1 && < 2,
                hxt        >= 9   && < 10,
                old-locale >= 1   && < 2,
                old-time   >= 1   && < 2,
                unix       >= 2.3 && < 3,
                SHA        >= 1.4 && < 2

