Name:           hxt-cache
Version:        9.1.0.2
Synopsis:       Cache for HXT XML Documents and other binary data
Description:    Extension for caching XML documents and other binary data in cache directory
                of the local filesystem
                .
                Changes from 9.0.2: dependency from old-time changed to time to work with ghc-7.6
                .
License:        OtherLicense
License-file:   LICENSE
Author:         Uwe Schmidt
Maintainer:     Uwe Schmidt <uwe@fh-wedel.de>
Stability:      Stable
Category:       XML
Homepage:       https://github.com/UweSchmidt/hxt
Copyright:      Copyright (c) 2010 Uwe Schmidt
Build-type:     Simple
Cabal-version:  >= 1.18

extra-source-files:
 test/TestXmlCache.hs
 examples/mini/Cache.hs

library
 exposed-modules:
  Text.XML.HXT.Cache
  Text.XML.HXT.Arrow.XmlCache
  Control.Concurrent.ResourceTable

 hs-source-dirs: src

 ghc-options: -Wall
 ghc-prof-options: -caf-all

 default-language:  Haskell2010

 build-depends: base        >= 4   && < 5,
                bytestring  >= 0.9,
                binary      >= 0.5,
                containers  >= 0.2,
                deepseq     >= 1.1,
                directory   >= 1.2,
                filepath    >= 1.1,
                hxt         >= 9   && < 10,
                time        >= 1.4 && < 2,
                unix-compat >= 0.3 && < 0.5,
                SHA         >= 1.4 && < 2

 if impl(ghc < 7.10)
   build-depends: old-locale >= 1 && < 2,
                  time       <  1.5

Source-Repository head
  Type:     git
  Location: git://github.com/UweSchmidt/hxt.git
