Name:                hxt-charproperties
Version:             9.5.0.0
Synopsis:            Character properties and classes for XML and Unicode
Description:         Character properties defined by XML and Unicode standards.
                     These modules contain predicates for Unicode blocks,
                     char properties
                     and character predicates defined by XML.
                     Supported Unicode version is 13.0.0
                     9.4.0.0: Supported Unicode version 12.1.0
                     9.3.0.2: Supported Unicode version 9.0.0
Homepage:            https://github.com/UweSchmidt/hxt
License:             MIT
License-file:        LICENSE
Author:              Uwe Schmidt
Maintainer:          Uwe Schmidt <uwe@fh-wedel.de>
Copyright:           Copyright (c) 2010- Uwe Schmidt
Stability:           Stable
Category:            Text
Build-type:          Simple

Cabal-version:       >=1.10

Extra-source-files:
  gen/Makefile
  gen/Blocks.txt
  gen/UnicodeData.txt
  gen/GenBlocks.hs
  gen/GenCharProps.hs

flag profile
  description: turn profiling on
  default: False

Library
  Exposed-modules:     
    Data.Char.Properties.UnicodeBlocks
    Data.Char.Properties.UnicodeCharProps
    Data.Char.Properties.XMLCharProps
    Data.Set.CharSet

  Build-depends:      base >= 4 && < 42
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  hs-source-dirs: src

  ghc-options: -Wall -fwarn-tabs -O2
  if flag(profile)
    ghc-prof-options: -caf-all

  default-language: Haskell2010
                  
Source-Repository head
  Type:     git
  Location: git://github.com/UweSchmidt/hxt.git
