Name:           hxt-expat
Version:        9.1.1.2
Synopsis:       Expat parser for HXT
Description:    The Expat interface for the HXT.
License:        OtherLicense
License-file:   LICENSE
Author:         Uwe Schmidt
Maintainer:     Uwe Schmidt <uwe@fh-wedel.de>
Stability:      Experimental
Category:       XML
Homepage:       https://github.com/UweSchmidt/hxt
Copyright:      Copyright (c) 2010 Uwe Schmidt
Build-type:     Simple
Cabal-version:  >=1.6

extra-source-files:
 examples/hparser/HXmlParser.hs

library
 exposed-modules:
  Text.XML.HXT.Expat

 other-modules:
  Text.XML.HXT.Arrow.ExpatInterface

 hs-source-dirs: src

 ghc-options: -Wall

 extensions: MultiParamTypeClasses DeriveDataTypeable FunctionalDependencies FlexibleInstances

 build-depends: base               >= 4      && < 5,
                bytestring         >= 0.9    && < 1,
                hexpat             >= 0.19.3 && < 1,
                hxt                >= 9.1    && < 10

Source-Repository head
  Type:     git
  Location: git://github.com/UweSchmidt/hxt.git
