-- arch-tag: Haskell XML Toolbox main description file
name: hxt-filter
version: 8.4.2
license: OtherLicense
license-file: LICENCE
maintainer: Uwe Schmidt <uwe@fh-wedel.de>
stability: stable
category: XML
synopsis: A collection of tools for processing XML with Haskell (Filter variant). 
description:  The Haskell XML Toolbox bases on the ideas of HaXml and HXML. This package is a compatibitlity package for old software working with the filter approach like in HaXml. For new projects it's recomended to use the arrow based library (hxt).
homepage: http://www.fh-wedel.de/~si/HXmlToolbox/index.html
copyright: Copyright (c) 2005-2009 Uwe Schmidt
build-type: Simple
cabal-version: >=1.6

library
 exposed-modules:
  Control.Monad.MonadStateIO,
  Data.Tree.NTree.Filter,
  System.PipeOpen,
  Text.XML.HXT.DOM,
  Text.XML.HXT.DOM.EditFilters,
  Text.XML.HXT.DOM.Namespace,
  Text.XML.HXT.DOM.NamespaceFilter,
  Text.XML.HXT.DOM.XmlState,
  Text.XML.HXT.DOM.XmlTree,
  Text.XML.HXT.DOM.XmlTreeFilter,
  Text.XML.HXT.DOM.XmlTreeFunctions,
  Text.XML.HXT.DOM.XmlTreeTypes,
  Text.XML.HXT.Parser,
  Text.XML.HXT.Parser.DTDProcessing,
  Text.XML.HXT.Parser.DefaultURI,
  Text.XML.HXT.Parser.HtmlParser,
  Text.XML.HXT.Parser.MainFunctions,
  Text.XML.HXT.Parser.ProtocolHandler,
  Text.XML.HXT.Parser.ProtocolHandlerFile,
  Text.XML.HXT.Parser.ProtocolHandlerHttpCurl,
  Text.XML.HXT.Parser.ProtocolHandlerHttpNative,
  Text.XML.HXT.Parser.ProtocolHandlerHttpNativeOrCurl,
  Text.XML.HXT.Parser.XmlInput,
  Text.XML.HXT.Parser.XmlOutput,
  Text.XML.HXT.Parser.XmlParser,
  Text.XML.HXT.Validator.AttributeValueValidation,
  Text.XML.HXT.Validator.DTDValidation,
  Text.XML.HXT.Validator.DocTransformation,
  Text.XML.HXT.Validator.DocValidation,
  Text.XML.HXT.Validator.IdValidation,
  Text.XML.HXT.Validator.RE,
  Text.XML.HXT.Validator.Validation,
  Text.XML.HXT.Validator.ValidationFilter,
  Text.XML.HXT.Validator.XmlRE
 hs-source-dirs: src
 ghc-options: -Wall
 extensions: MultiParamTypeClasses DeriveDataTypeable FunctionalDependencies FlexibleInstances

 build-depends: base       >= 4      && < 5,
                haskell98  >= 1      && < 2,
                containers >= 0.2    && < 1,
                directory  >= 1      && < 2,
                filepath   >= 1      && < 2,
                parsec     >= 2.1    && < 4,
                HUnit      >= 1.2    && < 2,
                network    >= 2.1    && < 3,
                HTTP       >= 4000   && < 5000,
                process    >= 1.0.1  && < 2,
                hxt        >= 8.4    && < 9

