-- arch-tag: Haskell XML Toolbox main description file
Name:           hxt-http
Version:        9.1.3
Synopsis:       Interface to native Haskell HTTP package HTTP
Description:    Interface to native Haskell HTTP package HTTP.
                This package can be used as alternative for the hxt-curl package
                for accessing documents via HTTP
License:        MIT
License-file:   LICENSE
Author:         Uwe Schmidt
Maintainer:     Uwe Schmidt <uwe@fh-wedel.de>
Stability:      Experimental
Category:       XML
Homepage:       http://www.fh-wedel.de/~si/HXmlToolbox/index.html
Copyright:      Copyright (c) 2011 Uwe Schmidt
Build-type:     Simple
Cabal-version:  >=1.6

library
 exposed-modules:
  Text.XML.HXT.HTTP

 other-modules:
  Text.XML.HXT.Arrow.LibHTTPInput,
  Text.XML.HXT.IO.GetHTTPNative

 hs-source-dirs: src

 ghc-options: -Wall
 ghc-prof-options: -auto-all -caf-all

 extensions:

 build-depends: base       >= 4    && < 5,
                parsec     >= 2.1  && < 4,
                bytestring >= 0.9  && < 1,
                network    >= 2.1  && < 3,
                HTTP       >= 4000 && < 5000,
                hxt        >= 9.1  && < 10
