Name:                hxt-install
Version:             9.0.0
Synopsis:            Dummy application for installing the HXT packages
Description:         Dummy application for installing the HXT packages.
                     The HXT packages not to be installed can be selected
                     by cabal flags, e.g. hxt-curl can be switched off
                     by flag noCurl
License:             OtherLicense
License-file:        LICENSE
Author:              Uwe Schmidt
Maintainer:          uwe@fh-wedel.de
Copyright:           Copyright (c) 2010 Uwe Schmidt
Stability:           Experimental
Category:            XML
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.6

Executable hxt-test
  -- .hs or .lhs file containing the Main module.
  Main-is: HXTTest.hs            
  
  Build-depends: base       >= 4   && < 5,
                 haskell98  >= 1   && < 2,
                 -- containers >= 0.2 && < 1,
                 directory  >= 1   && < 2,
                 -- filepath   >= 1   && < 2,
                 -- parsec     >= 2.1 && < 4,
                 HUnit      >= 1.2 && < 2,
                 -- network    >= 2.1 && < 3,
                 -- deepseq    >= 1.1 && < 2,
                 -- bytestring >= 0.9 && < 1,
                 -- binary     >= 0.5 && < 1,
                 hxt           >= 9 && < 10,
                 hxt-curl      >= 9 && < 10,
                 hxt-http      >= 9 && < 10,
                 hxt-tagsoup   >= 9 && < 10,
                 hxt-relaxng   >= 9 && < 10,
                 hxt-xpath     >= 9 && < 10,
                 hxt-xslt      >= 9 && < 10,
                 hxt-cache     >= 9 && < 10       
  
