Name:                hxt-install
Version:             9.0.0
Synopsis:            Dummy application for installing the HXT packages
Description:         Dummy application for installing the HXT packages.
                     The HXT packages not to be installed can be selected
                     by cabal flags, e.g. hxt-curl can be switched off
                     by flag noCurl
License:             OtherLicense
License-file:        LICENSE
Author:              Uwe Schmidt
Maintainer:          uwe@fh-wedel.de
Copyright:           Copyright (c) 2010 Uwe Schmidt
Stability:           Experimental
Category:            XML
Build-type:          Simple

-- Extra-source-files:  

Cabal-version:       >=1.6

Flag curl
 Description:        Install hxt-curl
 Default:            True

Flag http
 Description:        Install hxt-http
 Default:            True

Flag cache
 Description:        Install hxt-cache
 Default:            True

Flag tagsoup
 Description:        Install hxt-tagsoup
 Default:            True

Flag relaxng
 Description:        Install hxt-relaxng
 Default:            True

Flag xpath
 Description:        Install hxt-xpath
 Default:            True

Flag xslt
 Description:        Install hxt-xslt
 Default:            True

Executable hxt-test
  Main-is: HXTTest.hs            

  Extensions: CPP

  ghc-options: -Wall

  if flag(curl)
    CPP-Options: -Dcurl
 
  if flag(http)
    CPP-Options: -Dhttp
 
  if flag(cache)
    CPP-Options: -Dcache
 
  if flag(tagsoup)
    CPP-Options: -Dtagsoup
 
  if flag(relaxng)
    CPP-Options: -Drelaxng
 
  if flag(xpath)
    CPP-Options: -Dxpath
 
  if flag(xslt)
    CPP-Options: -Dxslt
 
  Build-depends: base             >= 4   && < 5,
                 haskell98        >= 1   && < 2,
                 directory        >= 1   && < 2,
                 HUnit            >= 1.2 && < 2,
                 hxt              >= 9   && < 10
  
  if flag(curl)
    Build-depends:  hxt-curl      >= 9 && < 10

  if flag(http)
    Build-depends:  hxt-http      >= 9 && < 10

  if flag(cache)
    Build-depends:  hxt-cache     >= 9 && < 10

  if flag(tagsoup)
    Build-depends:  hxt-tagsoup   >= 9 && < 10

  if flag(relaxng)
    Build-depends:  hxt-relaxng   >= 9 && < 10

  if flag(xpath)
    Build-depends:  hxt-xpath     >= 9 && < 10

  if flag(xslt)
    Build-depends:  hxt-xslt      >= 9 && < 10
